Put wallpaper client args in string array
We are still having problems getting the wallpaper client to run
correctly when the paths have spaces in them. This commit separ-
ates each of the arguments going to the wallpaper client into their
own string in a string array. It's more readable this way too.